<resources>
    <string name="app_name">Inventory App</string>
    <string name="unknown">Unknown</string>
    <string name="product_name">Product Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="product">Product</string>
    <string name="quantity_list">Quantity</string>
    <string name="price_list">Price</string>
    <string name="price_set">Price</string>
    <string name="product_name_set">Product Name</string>
    <string name="quantity_set">Quantity</string>
    <string name="price_1">Price</string>
    <string name="quantity_1">Quantity</string>
    <string name="supplier_name_1">Supplier Name</string>
    <string name="supplier_phone_no_1">Supplier Phone No.</string>
    <string name="submit_">Submit</string>
    <string name="name_1">Name</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_price">Product Price:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_phone_no">Supplier Phone No:</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="instructions">No Products Added!  \n\n1. To add a product, click on button at the bottom right.  \n2. Enter the details of the product.  \n3. Click on Submit.</string>
    <string name="sale">SALE</string>
</resources>
