<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.diyandroid.inventory.ProductDetails">

    <Button
        android:id="@+id/deleteProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/purchaseText"
        android:layout_margin="20dp"
        android:background="@drawable/login_button"
        android:text="@string/delete_product"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/purchase"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/quantityChanger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:foreground="@drawable/ic_action_call" />


    <TextView
        android:id="@+id/purchaseText"
        style="@style/textBoxStyle"
        android:layout_below="@id/purchase"
        android:gravity="center"
        android:text="@string/call_supplier"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/seeProductName"
        style="@style/textBoxStyle"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/seeProductPrice"
        style="@style/textBoxStyle"
        android:layout_below="@id/seeProductName"
        android:text="@string/price" />

    <TextView
        android:id="@+id/seeProductQuantity"
        style="@style/textBoxStyle"
        android:layout_below="@id/seeProductPrice"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/seeProductSupplierName"
        style="@style/textBoxStyle"
        android:layout_below="@id/seeProductQuantity"
        android:text="@string/supplier_name" />

    <TextView
        android:id="@+id/seeProductPhoneNo"
        style="@style/textBoxStyle"
        android:layout_below="@id/seeProductSupplierName"
        android:text="@string/supplier_phone_no" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_name" />

    <LinearLayout
        android:id="@+id/quantityChanger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seeProductPhoneNo"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decreaseQuantity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/login_button"
            android:foreground="@drawable/ic_action_remove" />

        <Button
            android:id="@+id/increaseQuantity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/login_button"
            android:foreground="@drawable/ic_action_add" />
    </LinearLayout>


</RelativeLayout>
